finally linked my css to my html

--- a/index.html
+++ b/index.html
@@ -6,6 +6,12 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Basic Portfolio</title>
     <header>Rafael Galvez</header>
+    <link rel="stylesheet" type="text/css" href="./assets/css/style.css">
+    <ul>
+        <li><a href="#About">About</a></li>
+        <li><a href="#Portfolio">Portfolio</a></li>
+        <li><a href="#Contact">Contact</a></li>
+    </ul>
 </head>
 
 <body>
@@ -19,6 +25,8 @@
 <p>I'm not student type of person but when it comes to this program I'm taking, I am filled with excitement to learn about coding. Having the ability
     to create what ever you can think of is just incredible. 
 </p>
+
+
 </body>
 
 </html>
