figuring out how to do a nav bar

--- a/index.html
+++ b/index.html
@@ -5,13 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Basic Portfolio</title>
-    <header>Rafael Galvez</header>
     <link rel="stylesheet" type="text/css" href="./assets/css/style.css">
-    <ul>
-        <li><a href="#About">About</a></li>
-        <li><a href="#Portfolio">Portfolio</a></li>
-        <li><a href="#Contact">Contact</a></li>
-    </ul>
+   <header>Rafael Galvez</header>
+   <nav>
+   <div>
+        <a href="About">About</a>
+        <a href="Porftfolio">Portfolio</a>
+        <a href="Contact">Contact</a>
+    </div>
+</nav>
 </head>
 
 <body>
