--- a/index.html
+++ b/index.html
@@ -1,38 +1,53 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Basic Portfolio</title>
     <link rel="stylesheet" type="text/css" href="./assets/css/style.css">
-   <header>
-       <strong>Rafael Galvez</strong>
-   <nav>
-   <div>
-        <a href="About">About</a>
-        <a href="Porftfolio">Portfolio</a>
-        <a href="Contact">Contact</a>
-    </div>
-</nav>
-</header>
 </head>
 
+<div class="navbackground">
+    <strong>
+        <h1>Rafael Galvez</h1>
+    </strong>
+    <div class="navbar">
+        <ul>
+            <li><a href="about.html">About</a></li>
+            <li><a href="porftfolio.html">Portfolio</a></li>
+            <li><a href="contact.html">Contact</a></li>
+    </div>
+</div>
+</ul>
+</nav>
 
-<body>
-<h1>About Me</h1>
-<br>
-<img src="assets/images/raf.jpg" alt="Rafael's picture">
-<p>My Name is Rafael Galvez. I was born in the Philippines. Came to America when I was 6 years old and lived in Belleville, New Jersey ever since. 
-   I love New Jersey and everything it has to offer. I mean, New York City is roughly a 20 min drive! Seems crazy to think how fortunate we are to have
-   such an amazing city thats accessible to everybody. I don't really announce this but I do enjoy taking pictures. No I am not a "photographer", 
-   I simply just enjoy being behind the lens. 
-<br>
-<p>I'm not student type of person but when it comes to this program I'm taking, I am filled with excitement to learn about coding. Having the ability
-    to create what ever you can think of is just incredible. 
-</p>
+<body background="assets/images/lines.png">
+    <div class="box" <strong>
+        <h2>About Me</h2>
+        </strong>
+        <br>
+        <br>
+        <img src="assets/images/raf.jpg" alt="Rafael's picture" width=200px height=300px>
 
-
+        <div class="summary">
+            <p>My Name is Rafael Galvez. I was born in the Philippines. Came to America when I was 6 years old and lived
+                in
+                Belleville, New Jersey ever since.
+                I love New Jersey and everything it has to offer. I mean, New York City is roughly a 20 min drive! Seems
+                crazy to think how fortunate we are to have
+                such an amazing city thats accessible to everybody. I don't really announce this but I do enjoy taking
+                pictures. No I am not a "photographer",
+                I simply just enjoy being behind the lens.
+                <br>
+                <p>I'm not student type of person but when it comes to this program I'm taking, I am filled with
+                    excitement
+                    to learn about coding. Having the ability
+                    to create what ever you can think of is just incredible.
+                </p>
+        </div>
+    </div>
 </body>
 
 </html>
