finally got my nav bar to look nice

--- a/index.html
+++ b/index.html
@@ -13,31 +13,35 @@
     <strong>
         <h1>Rafael Galvez</h1>
     </strong>
+    <header>
     <div class="navbar">
         <ul>
-            <li><a href="about.html">About</a></li>
-            <li><a href="porftfolio.html">Portfolio</a></li>
-            <li><a href="contact.html">Contact</a></li>
-    </div>
+            <li class="about"><a href="about.html">About</a></li>
+            <li class="portfolio"><a href="porftfolio.html">Portfolio</a></li>
+            <li class="contact"><a href="contact.html">Contact</a></li>
+        </div>
 </div>
 </ul>
-</nav>
-
+</header>
 <body background="assets/images/lines.png">
-    <div class="box" <strong>
-        <h2>About Me</h2>
+    <div class="box"> <strong>
+            <h2>About Me</h2>
         </strong>
+        <hr>
         <br>
         <br>
         <img src="assets/images/raf.jpg" alt="Rafael's picture" width=200px height=300px>
 
         <div class="summary">
-            <p>My Name is Rafael Galvez. I was born in the Philippines. Came to America when I was 6 years old and lived
+            <p>My Name is Rafael Galvez. I was born in the Philippines. Came to America when I was 6 years old and
+                lived
                 in
                 Belleville, New Jersey ever since.
-                I love New Jersey and everything it has to offer. I mean, New York City is roughly a 20 min drive! Seems
+                I love New Jersey and everything it has to offer. I mean, New York City is roughly a 20 min drive!
+                Seems
                 crazy to think how fortunate we are to have
-                such an amazing city thats accessible to everybody. I don't really announce this but I do enjoy taking
+                such an amazing city thats accessible to everybody. I don't really announce this but I do enjoy
+                taking
                 pictures. No I am not a "photographer",
                 I simply just enjoy being behind the lens.
                 <br>
