--- a/index.html
+++ b/index.html
@@ -8,18 +8,17 @@
     <title>Basic Portfolio</title>
     <link rel="stylesheet" type="text/css" href="./assets/css/style.css">
 </head>
-
+<header>
 <div class="navbackground">
-    <strong>
-        <h1>Rafael Galvez</h1>
-    </strong>
-    <header>
     <div class="navbar">
+        <div class= "namebackground">
+       <strong> <h1>Rafael Galvez</h1> </strong>
         <ul>
-            <li class="about"><a href="about.html">About</a></li>
+            <li class="about"><a href="index.html">About</a></li>
             <li class="portfolio"><a href="porftfolio.html">Portfolio</a></li>
             <li class="contact"><a href="contact.html">Contact</a></li>
         </div>
+</div>
 </div>
 </ul>
 </header>
@@ -51,6 +50,8 @@
                     to create what ever you can think of is just incredible.
                 </p>
         </div>
+    </div>
+    <div class="bottomline">
     </div>
 </body>
 
