--- a/contact.html
+++ b/contact.html
@@ -24,9 +24,11 @@
     </div>
     </ul>
 </header>
-
+<br>
+<br>
 <body background="assets/images/lines.png">
-    <div class="box">
+    
 </body>
-
+<div class="greenline">
+    </div>
 </html>
